--- a/my-portfolio/src/components/Footer/footer.css
+++ b/my-portfolio/src/components/Footer/footer.css
@@ -34,7 +34,7 @@ footer a {
 
 .footer__socials a {
     color: var(--color-white);
-    background: var(--color-bg);
+    background: var(--color-primary-variant);
     padding: 0.8rem;
     border-radius: 0.7rem;
     display: flex;
@@ -47,10 +47,6 @@ footer a {
     border-color: var(--color-bg);
 }
 
-.footer__copyright {
-    margin-bottom: 4rem;
-    color: var(--color-light);
-}
 
 /* ------ Media Query for small devices (Mobile) ----------- */
 @media screen and (max-width: 600px) {
