--- a/my-portfolio/src/components/Header/header.css
+++ b/my-portfolio/src/components/Header/header.css
@@ -1,6 +1,6 @@
 header {
     height: 100vh;
-    padding-top: 7rem;
+    padding-top: 20rem;
     overflow: hidden;
 }
 
@@ -19,7 +19,7 @@ header {
 
 .header__socials {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 1rem;
     position: absolute;
@@ -32,19 +32,6 @@ header {
     width: 2px;
     height: 2.5rem;
     background: var(--color-primary);
-}
-
-.me {
-    background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 40rem;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
 
 .scroll__down {
